--- a/case_study_home.css
+++ b/case_study_home.css
@@ -35,7 +35,7 @@ body {
 }
 
 .first_text {
-  color: #0E408A;
+  color: #000;
   font-family: 'Montserrat';
   font-size: 25px;
   text-align: center;
@@ -61,7 +61,7 @@ body {
 
 .grid-item {
   background-color: #fff;
-  border: 5px solid #000;
+  border: 5px solid #0E408A;
   padding: 50px;
   text-align: center;
   width: 300px;
@@ -121,12 +121,25 @@ body {
 }
 
 .next {
-right: 0;
-border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
+}
+
+.underline {
+  display: block;
+  align-self: center;
+  justify-content: center;
+  width: 200px;
+  height: 1px;
+  background-color: #000;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px 1px #000;
+  border-radius: 2px;
 }
 
 @keyframes shake {
