--- a/mp0.css
+++ b/mp0.css
@@ -6,20 +6,178 @@
     float: center;
     margin-left: 100px;
     margin-right: 100px;
-    margin-top: 50px;
+    margin-top:50px;
     font-family: 'Proxima Nova';
-}
+  }
   
-.navbar a {
+  .navbar a {
     text-align: center;
     text-decoration: none;
     color: #000;
     font-size: 18px;
-}
-
-.navbar a:hover {
+  }
+  
+  .navbar a:hover {
     background-color: #d8e8ff;
     color: #000;
+  }
+
+.mp_1 {
+    display: block;
+    align-self: flex-start;
+    justify-content: flex-start;
+    margin-top: 125px;
 }
+
+.title {
+    font-size: 24px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    text-align: center;
+}
+
+.usage {
+    font-size: 18px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 50px;
+    font-weight: bold;
+    line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
+
+
+}
+
+.usage_content {
+    font-size: 16px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 15px;
+    margin-left: 350px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
+
+}
+
+.issue {
+    font-size: 18px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 50px;
+    font-weight: bold;
+    line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
+
+
+}
+
+.issue_content {
+    font-size: 16px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 15px;
+    margin-left: 330px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
+
+}
+
+.css {
+    font-size: 18px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 50px;
+    font-weight: bold;
+    line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
+
+
+}
+
+.css_content {
+    font-size: 16px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 15px;
+    margin-left: 330px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
+
+}
+
+.gif {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-bottom: 75px;
+    margin-top: 50px;
+    border: 5px 5px #000;
+    border-style: solid;
+    border-radius: 50px;
+}
+
+.gif img {
+    width: 600px;
+    height: 600px;
+    object-fit: contain;
+}
+
+.idea {
+    font-size: 18px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 50px;
+    font-weight: bold;
+    line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
+}
+
+.idea_content {
+    font-size: 16px;
+    font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 15px;
+    margin-left: 350px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
+    margin-bottom: 100px;
+
+}
+
+#page-container {
+    position: relative;
+    min-height: 20vh;
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 15vh;
+    background-color: #000;
+  }
+  
+  #content-wrap {
+    margin-left: 50px;
+    margin-top: 40px;
+  }
+  
+  #content-wrap img {
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
+    margin-left: 10px;
+    cursor: pointer;
+  }
 
 
