--- a/mp1.css
+++ b/mp1.css
@@ -26,14 +26,14 @@
     display: block;
     align-self: flex-start;
     justify-content: flex-start;
-    margin-left: 100px;
     margin-top: 125px;
 }
 
 .title {
     font-size: 24px;
-    font-family: 'Proxima Nova';
-    font-weight: bold;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    text-align: center;
 }
 
 .usage {
@@ -43,6 +43,9 @@
     margin-top: 50px;
     font-weight: bold;
     line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
+
 
 }
 
@@ -50,99 +53,104 @@
     font-size: 16px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    width: 500px;
     margin-top: 15px;
     margin-left: 15px;
     line-height: 22px;
+    text-align: center;
 
 }
 
 .gif {
-    margin-left: 15px;
-    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: 250px;
+    margin-right: 250px;
     margin-bottom: 35px;
+    border: 5px 5px #000;
+    border-style: solid;
+    border-radius: 50px;
+}
+
+.gif img {
+    width: 1000px;
+    height: 500px;
+    object-fit: contain;
 }
 
 .dev {
     font-size: 18px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-left: 100px;
-    margin-bottom: 15px;
+    margin-top: 100px;
     font-weight: bold;
     line-height: 22px;
-
+    text-align: left;
+    margin-left: 310px;
 }
 
-.dev_content1 {
+.dev_content {
     font-size: 16px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    width: 500px;
-    margin-left: 125px;
+    margin-top: 15px;
+    margin-left: 350px;
     line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
 }
 
-#browser_init {
-    width: 500px;
-    height: 500px;
-    object-fit: contain;
-    margin-left: 100px;
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 350px;
+    margin-right: 350px;
+    
 }
 
-#init_caption {
-    margin-left: 235px;
-    font-family: 'Proxima Nova';
+.slideshow-container {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    width: 65%;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+  
+.slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+  
+.slide.active {
+    opacity: 1;
 }
 
-#browser_html {
-    width: 750px;
-    height: 500px;
-    object-fit: contain;
-    margin-left: 25px;
-}
-
-.dev_2 {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    width: 500px;
-    margin-left: 125px;
-    line-height: 22px;
-}
-
-#browser_init2 {
-    width: 500px;
-    height: 350px;
-    object-fit: contain;
-    margin-left: 100px;
-}
-
-#browser_toggle {
-    width: 500px;
-    height: 150px;
-    object-fit: contain;
-    margin-left: 100px;
-    margin-bottom: 95px;
-}
-
-.dev_3 {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    width: 500px;
-    margin-left: 125px;
-    line-height: 22px;
-}
 
 .deep_dive {
     font-size: 18px;
     font-family: 'Proxima Nova';
-    font-weight: bold;
-    width: 500px;
+    font-weight: normal;
     margin-top: 50px;
-    margin-left: 100px;
+    font-weight: bold;
     line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
 
 }
 
@@ -160,19 +168,22 @@
     font-size: 16px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin: 25px;
-    width: 750px;
+    margin-top: 15px;
+    margin-left: 50px;
     line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
 }
 
 #ideas {
     font-size: 18px;
     font-family: 'Proxima Nova';
+    font-weight: normal;
+    margin-top: 100px;
     font-weight: bold;
-    width: 500px;
-    margin-left: 100px;
     line-height: 22px;
-    margin-top: 50px;
+    text-align: left;
+    margin-left: 310px;
 
 }
 
@@ -180,28 +191,33 @@
     font-size: 16px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-left: 125px;
-    line-height: 22px;
     margin-top: 15px;
+    margin-left: 350px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
 }
 
 #kudos {
     font-size: 18px;
     font-family: 'Proxima Nova';
-    font-weight: bold;
-    width: 500px;
-    margin-left: 100px;
+    font-weight: normal;
     margin-top: 50px;
+    font-weight: bold;
     line-height: 22px;
+    text-align: left;
+    margin-left: 310px;
 }
 
 #help {
     font-size: 16px;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-left: 125px;
-    line-height: 22px;
     margin-top: 15px;
+    margin-left: 350px;
+    line-height: 22px;
+    text-align: left;
+    margin-right: 350px;
 }
 
 #page-container {
