--- a/mp1.css
+++ b/mp1.css
@@ -3,118 +3,117 @@
     overflow: hidden;
     justify-content: space-between;
     display: flex;
-    float: center;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top:50px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
     font-family: 'Proxima Nova';
-  }
-  
-  .navbar a {
+}
+
+.navbar a {
     text-align: center;
     text-decoration: none;
     color: #000;
-    font-size: 18px;
-  }
-  
-  .navbar a:hover {
+    font-size: 1.125rem;
+}
+
+.navbar a:hover {
     background-color: #d8e8ff;
     color: #000;
-  }
+}
 
 .mp_1 {
     display: block;
     align-self: flex-start;
     justify-content: flex-start;
-    margin-top: 125px;
+    margin-top: 12.5vh;
 }
 
 .title {
-    font-size: 24px;
+    font-size: 1.75vw;
     font-family: 'Montserrat';
     font-weight: 500;
     text-align: center;
 }
 
 .usage {
-    font-size: 18px;
+    font-size: 1.2vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 50px;
+    margin-top: 5vh;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 2.2vw;
     text-align: left;
-    margin-left: 310px;
-
-
+    margin-left: 19.5vw;
 }
 
 .usage_content {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 15px;
-    margin-left: 15px;
-    line-height: 22px;
-    text-align: center;
-
+    margin-top: 1.5vh;
+    margin-left: 20.5vw;
+    line-height: 1.5vw;
+    text-align: left;
 }
 
 .gif {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
-    margin-left: 250px;
-    margin-right: 250px;
-    margin-bottom: 35px;
+    margin-left: 17.5vw;
+    margin-right: 17.5vw;
+    margin-bottom: 7.5vh;
+    margin-top: 5vh;
     border: 5px 5px #000;
     border-style: solid;
-    border-radius: 50px;
+    border-radius: 5vw;
 }
 
 .gif img {
-    width: 1000px;
-    height: 500px;
+    width: 60vw;
+    height: 30vw;
     object-fit: contain;
 }
 
 .dev {
-    font-size: 18px;
+    font-size: 1.2vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 100px;
+    margin-top: 5vh;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 2.2vw;
     text-align: left;
-    margin-left: 310px;
+    margin-left: 19.5vw;
 }
 
 .dev_content {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 15px;
-    margin-left: 350px;
-    line-height: 22px;
+    margin-top: 1.5vh;
+    margin-left: 20.5vw;
+    line-height: 1.5vw;
     text-align: left;
-    margin-right: 350px;
 }
 
 .image {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-left: 350px;
-    margin-right: 350px;
+    margin-left: 17.5vw;
+    margin-right: 17.5vw;
+    margin-bottom: 7.5vh;
+    margin-top: 5vh;
+    border: 5px 5px #000;
+    border-style: solid;
+    border-radius: 5vw;
     
 }
 
 .slideshow-container {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 42.5vh;
     overflow: hidden;
     width: 65%;
     margin: 0 auto;
@@ -143,86 +142,85 @@
 
 
 .deep_dive {
-    font-size: 18px;
+    font-size: 1.2vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 50px;
+    margin-top: 5vh;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 2.2vw;
     text-align: left;
-    margin-left: 310px;
-
+    margin-left: 19.5vw;
 }
 
 #issue {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin: 15px;
-    width: 750px;
-    line-height: 22px;
-
+    margin-top: 1.5vh;
+    line-height: 1.5vw;
+    text-align: left;
+    margin-right: 15.5vw;
 }
 
 #steps {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 15px;
-    margin-left: 50px;
-    line-height: 22px;
+    margin-top: 1.5vh;
+    margin-left: 2.5vw;
+    line-height: 1.5vw;
     text-align: left;
-    margin-right: 350px;
 }
 
 #ideas {
-    font-size: 18px;
+    font-size: 1.2vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 100px;
+    margin-top: 5vh;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 2.2vw;
     text-align: left;
-    margin-left: 310px;
-
+    margin-left: 19.5vw;
 }
 
 #changes {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 15px;
-    margin-left: 350px;
-    line-height: 22px;
+    margin-top: 1.5vh;
+    line-height: 1.5vw;
     text-align: left;
-    margin-right: 350px;
+    margin-right: 15.5vw;
+    margin-left: 20.5vw;
 }
 
 #kudos {
-    font-size: 18px;
+    font-size: 1.2vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 50px;
+    margin-top: 5vh;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 2.2vw;
     text-align: left;
-    margin-left: 310px;
+    margin-left: 19.5vw;
 }
 
 #help {
-    font-size: 16px;
+    font-size: 1vw;
     font-family: 'Proxima Nova';
     font-weight: normal;
-    margin-top: 15px;
-    margin-left: 350px;
-    line-height: 22px;
+    margin-top: 1.5vh;
+    line-height: 1.5vw;
     text-align: left;
-    margin-right: 350px;
+    margin-right: 15.5vw;
+    margin-left: 20.5vw;
+    margin-bottom: 7.8125rem;
+
 }
 
 #page-container {
     position: relative;
-    min-height: 45vh;
+    min-height: 20vh;
   }
   
   #footer {
@@ -234,17 +232,18 @@
   }
   
   #content-wrap {
-    margin-left: 50px;
-    margin-top: 40px;
+    margin-left: 3.125rem; 
+    margin-top: 2.5rem;
   }
   
   #content-wrap img {
-    width: 25px;
-    height: 25px;
+    width: 1.5625rem; 
+    height: 1.5625rem; 
     object-fit: contain;
-    margin-left: 10px;
+    margin-left: 0.625rem;
     cursor: pointer;
   }
-
+  
+  
 
 
