--- a/case_study_home.css
+++ b/case_study_home.css
@@ -7,18 +7,17 @@ body {
   overflow: hidden;
   justify-content: space-between;
   display: flex;
-  float: center;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top:50px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
   font-family: 'Proxima Nova';
 }
-  
+
 .navbar a {
   text-align: center;
   text-decoration: none;
   color: #000;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
 .navbar a:hover {
@@ -28,16 +27,16 @@ body {
 
 .welcome {
   text-align: left;
-  margin-top: 150px;
+  margin-top: 6.25rem;
   line-height: 75%;
   font-family: 'Proxima Nova';
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
 .first_text {
   color: #000;
   font-family: 'Montserrat';
-  font-size: 25px;
+  font-size: 1.5625rem;
   text-align: center;
 }
 
@@ -48,31 +47,31 @@ body {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;  
+  grid-template-rows: 1fr 1fr;
   justify-items: center;
   align-items: center;
-  margin-top: 50px;
-  margin-bottom: 125px;
-  padding-left: 100px;
-  padding-right: 100px;
-  padding-top: 50px;
-  row-gap: 50px;
+  margin-top: 3.125rem; 
+  margin-bottom: 7.8125rem; 
+  padding-left: 6.25rem; 
+  padding-right: 6.25rem; 
+  padding-top: 3.125rem; 
+  row-gap: 3.125rem; 
 }
 
 .grid-item {
   background-color: #fff;
-  border: 5px solid #0E408A;
-  padding: 50px;
+  border: 0.3125rem solid #0E408A; 
+  padding: 3.125rem; 
   text-align: center;
-  width: 300px;
-  height: 300px;
-  font-size: 30px;
-  border-radius: 50px;
+  width: 18.75rem; 
+  height: 18.75rem; 
+  font-size: 1.875rem; 
+  border-radius: 3.125rem;
 }
 
 .grid-item img {
-  width: 300px;
-  height: 300px;
+  width: 18.75rem; 
+  height: 18.75rem; 
   object-fit: contain;
 }
 
@@ -94,15 +93,15 @@ body {
 }
 
 #content-wrap {
-  margin-left: 50px;
-  margin-top: 40px;
+  margin-left: 3.125rem; 
+  margin-top: 2.5rem;
 }
 
 #content-wrap img {
-  width: 25px;
-  height: 25px;
+  width: 1.5625rem; 
+  height: 1.5625rem; 
   object-fit: contain;
-  margin-left: 10px;
+  margin-left: 0.625rem;
   cursor: pointer;
 }
 
@@ -111,18 +110,18 @@ body {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
+  margin-top: -1.375rem;
+  padding: 1rem;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1.125rem;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0 0.1875rem 0.1875rem 0;
 }
 
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
+  border-radius: 0.1875rem 0 0 0.1875rem;
 }
 
 .prev:hover, .next:hover {
@@ -133,20 +132,20 @@ body {
   display: block;
   align-self: center;
   justify-content: center;
-  width: 200px;
-  height: 1px;
+  width: 12.5rem; 
+  height: 0.0625rem;
   background-color: #000;
   margin-left: auto;
   margin-right: auto;
-  border: 1px 1px #000;
-  border-radius: 2px;
+  border: 0.0625rem 0.0625rem #000;
+  border-radius: 0.125rem;
 }
 
 @keyframes shake {
   0% { transform: translateX(0) }
-  25% { transform: translateX(1.5px) }
-  50% { transform: translateX(-1.5px) }
-  75% { transform: translateX(1.5px) }
+  25% { transform: translateX(0.1rem) }
+  50% { transform: translateX(-0.1rem) }
+  75% { transform: translateX(0.1rem) }
   100% { transform: translateX(0) }
 }
 
