--- a/mp0.css
+++ b/mp0.css
@@ -1,183 +1,171 @@
 .navbar {
-    background-color: #f8f8ff;
-    overflow: hidden;
-    justify-content: space-between;
-    display: flex;
-    float: center;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top:50px;
-    font-family: 'Proxima Nova';
-  }
-  
-  .navbar a {
-    text-align: center;
-    text-decoration: none;
-    color: #000;
-    font-size: 18px;
-  }
-  
-  .navbar a:hover {
-    background-color: #d8e8ff;
-    color: #000;
-  }
+  background-color: #f8f8ff;
+  overflow: hidden;
+  justify-content: space-between;
+  display: flex;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+  font-family: 'Proxima Nova';
+}
+
+.navbar a {
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  font-size: 1.125rem;
+}
+
+.navbar a:hover {
+  background-color: #d8e8ff;
+  color: #000;
+}
+
 
 .mp_1 {
-    display: block;
-    align-self: flex-start;
-    justify-content: flex-start;
-    margin-top: 125px;
+  display: block;
+  align-self: flex-start;
+  justify-content: flex-start;
+  margin-top: 12.5vh;
 }
 
 .title {
-    font-size: 24px;
-    font-family: 'Montserrat';
-    font-weight: 500;
-    text-align: center;
+  font-size: 1.75vw;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  text-align: center;
 }
 
 .usage {
-    font-size: 18px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 50px;
-    font-weight: bold;
-    line-height: 22px;
-    text-align: left;
-    margin-left: 310px;
-
-
+  font-size: 1.2vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 5vh;
+  font-weight: bold;
+  line-height: 2.2vw;
+  text-align: left;
+  margin-left: 19.5vw;
 }
 
 .usage_content {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 15px;
-    margin-left: 350px;
-    line-height: 22px;
-    text-align: left;
-    margin-right: 350px;
-
+  font-size: 1vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 1.5vh;
+  margin-left: 20.5vw;
+  line-height: 1.5vw;
+  text-align: left;
 }
 
 .issue {
-    font-size: 18px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 50px;
-    font-weight: bold;
-    line-height: 22px;
-    text-align: left;
-    margin-left: 310px;
-
-
+  font-size: 1.2vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 5vh;
+  font-weight: bold;
+  line-height: 2.2vw;
+  text-align: left;
+  margin-left: 19.5vw;
 }
 
 .issue_content {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 15px;
-    margin-left: 330px;
-    line-height: 22px;
-    text-align: left;
-    margin-right: 350px;
-
+  font-size: 1vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 1.5vh;
+  margin-left: 20.5vw;
+  line-height: 1.5vw;
+  text-align: left;
+  margin-right: 20vw;
 }
 
 .css {
-    font-size: 18px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 50px;
-    font-weight: bold;
-    line-height: 22px;
-    text-align: left;
-    margin-left: 310px;
-
-
+  font-size: 1.2vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 5vh;
+  font-weight: bold;
+  line-height: 2.2vw;
+  text-align: left;
+  margin-left: 19.5vw;
 }
 
 .css_content {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 15px;
-    margin-left: 330px;
-    line-height: 22px;
-    text-align: left;
-    margin-right: 350px;
-
+  font-size: 1vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 1.5vh;
+  margin-left: 20.5vw;
+  line-height: 1.5vw;
+  text-align: left;
+  margin-right: 20vw;
 }
 
 .gif {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 350px;
-    margin-right: 350px;
-    margin-bottom: 75px;
-    margin-top: 50px;
-    border: 5px 5px #000;
-    border-style: solid;
-    border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 25vw;
+  margin-right: 25vw;
+  margin-bottom: 7.5vh;
+  margin-top: 5vh;
+  border: 5px 5px #000;
+  border-style: solid;
+  border-radius: 5vw;
 }
 
 .gif img {
-    width: 600px;
-    height: 600px;
-    object-fit: contain;
+  width: 35vw;
+  height: 30vw;
+  object-fit: contain;
 }
 
 .idea {
-    font-size: 18px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 50px;
-    font-weight: bold;
-    line-height: 22px;
-    text-align: left;
-    margin-left: 310px;
+  font-size: 1.2vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 5vh;
+  font-weight: bold;
+  line-height: 2.2vw;
+  text-align: left;
+  margin-left: 19.5vw;
 }
 
 .idea_content {
-    font-size: 16px;
-    font-family: 'Proxima Nova';
-    font-weight: normal;
-    margin-top: 15px;
-    margin-left: 350px;
-    line-height: 22px;
-    text-align: left;
-    margin-right: 350px;
-    margin-bottom: 100px;
-
+  font-size: 1vw;
+  font-family: 'Proxima Nova';
+  font-weight: normal;
+  margin-top: 1.5vh;
+  margin-left: 20.5vw;
+  line-height: 1.5vw;
+  text-align: left;
+  margin-bottom: 7.8125rem;
 }
 
 #page-container {
-    position: relative;
-    min-height: 20vh;
-  }
-  
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 15vh;
-    background-color: #000;
-  }
-  
-  #content-wrap {
-    margin-left: 50px;
-    margin-top: 40px;
-  }
-  
-  #content-wrap img {
-    width: 25px;
-    height: 25px;
-    object-fit: contain;
-    margin-left: 10px;
-    cursor: pointer;
-  }
+  position: relative;
+  min-height: 20vh;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 15vh;
+  background-color: #000;
+}
+
+#content-wrap {
+  margin-left: 3.125rem; 
+  margin-top: 2.5rem;
+}
+
+#content-wrap img {
+  width: 1.5625rem; 
+  height: 1.5625rem; 
+  object-fit: contain;
+  margin-left: 0.625rem;
+  cursor: pointer;
+}
 
 
