--- a/writing.css
+++ b/writing.css
@@ -3,18 +3,17 @@
     overflow: hidden;
     justify-content: space-between;
     display: flex;
-    float: center;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top:50px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
     font-family: 'Proxima Nova';
 }
-  
+
 .navbar a {
     text-align: center;
     text-decoration: none;
     color: #000;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .navbar a:hover {
@@ -26,12 +25,12 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 6.25vw;
+    margin-left: 6.25vw;
 }
 
 .item {
-    font-size: 24px;
+    font-size: 1.5vw;
     line-height: 10%;
     font-family: 'Montserrat';
     font-weight: bold;
@@ -42,42 +41,41 @@
 }
 
 .box {
-    width: 600px;
-    height: 175px;
+    width: 37.5vw;
+    height: 10.94vw;
     background-color: #9CC4FF;
     color: #000;
-    border-radius: 50px;
+    border-radius: 3.125vw;
     display: flex;
-    margin-top: 35px;
+    margin-top: 1.76vw;
 }
 
 .desc {
     color: #0E408A;
-    font-size: 16px;
+    font-size: 1.25vw;
 }
 
 .text {
     font-family: 'Proxima Nova';
-    font-size: 16px;
+    font-size: 1vw;
     font-weight: normal;
     line-height: normal;
-    margin: 35px;
-
+    margin: 2vw;
 }
 
 .ui_elements {
     display: flex;
     align-items: flex-start;
-    margin-left: 10px;
-    margin-bottom: 100px;
+    margin-left: 0.625vw;
+    margin-bottom: 12.5vw;
 }
 
 .ui_1 {
-    width: 120px;
-    height: 15px;
-    border-radius: 25px;
+    width: 7.5vw;
+    height: 1.17vw;
+    border-radius: 3.125vw;
     background-color: #9CC4FF;
-    margin-top: 15px;
+    margin-top: 1.76vw;
 }
 
 .ui_1:hover {
@@ -85,12 +83,12 @@
 }
 
 .ui_2 {
-    width: 75px;
-    height: 15px;
-    border-radius: 25px;
+    width: 4.69vw;
+    height: 1.17vw;
+    border-radius: 3.125vw;
     background-color: #9CC4FF;
-    margin-top: 15px;
-    margin-left: 5px;
+    margin-top: 1.76vw;
+    margin-left: 0.313vw;
 }
 
 .ui_2:hover {
@@ -98,15 +96,15 @@
 }
 
 .button_1 {
-    border: 1px 1px #000;
+    border: 0.017vw solid #000;
     color: #000;
     background-color: #f8f8ff;
-    border-radius: 5px;
+    border-radius: 0.313vw;
     font-family: 'Proxima Nova';
-    height: 25px;
-    width: 125px;
-    margin-top: 10px;
-    margin-left: 25px;
+    height: 1.76vw;
+    width: 7.81vw;
+    margin-top: 1.35vw;
+    margin-left: 1.56vw;
 }
 
 .button_1:hover {
@@ -117,34 +115,26 @@
 
 #page-container {
     position: relative;
-    min-height: 25vh;
-}
+    min-height: 20vh;
+  }
   
-#footer {
+  #footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 15vh;
     background-color: #000;
-}
-
-#content-wrap {
-    margin-left: 50px;
-    margin-top: 40px;
-}
-
-#content-wrap img {
-    width: 25px;
-    height: 25px;
+  }
+  
+  #content-wrap {
+    margin-left: 3.125rem; 
+    margin-top: 2.5rem;
+  }
+  
+  #content-wrap img {
+    width: 1.5625rem; 
+    height: 1.5625rem; 
     object-fit: contain;
-    margin-left: 10px;
+    margin-left: 0.625rem;
     cursor: pointer;
-}
-
-@keyframes shake {
-    0% { transform: translateX(0) }
-    25% { transform: translateX(1.5px) }
-    50% { transform: translateX(-1.5px) }
-    75% { transform: translateX(1.5px) }
-    100% { transform: translateX(0) }
   }
