--- a/mp0.css
+++ b/mp0.css
@@ -53,6 +53,7 @@
   font-weight: normal;
   margin-top: 1.5vh;
   margin-left: 20.5vw;
+  margin-right: 20vw;
   line-height: 1.5vw;
   text-align: left;
 }
