--- a/mp1.css
+++ b/mp1.css
@@ -54,6 +54,7 @@
     margin-left: 20.5vw;
     line-height: 1.5vw;
     text-align: left;
+    margin-right: 22.5vw;
 }
 
 .gif {
@@ -170,6 +171,8 @@
     margin-left: 2.5vw;
     line-height: 1.5vw;
     text-align: left;
+    margin-right: 20vw;
+
 }
 
 #ideas {
