--- a/writing.css
+++ b/writing.css
@@ -67,7 +67,7 @@
     display: flex;
     align-items: flex-start;
     margin-left: 0.625vw;
-    margin-bottom: 12.5vw;
+    margin-bottom: 5.5rem;
 }
 
 .ui_1 {
@@ -102,9 +102,10 @@
     border-radius: 0.313vw;
     font-family: 'Proxima Nova';
     height: 1.76vw;
-    width: 7.81vw;
+    min-width: 7.81vw;
     margin-top: 1.35vw;
     margin-left: 1.56vw;
+    font-size: 0.75rem;
 }
 
 .button_1:hover {
