--- a/case_study_home.css
+++ b/case_study_home.css
@@ -26,18 +26,26 @@ body {
 }
 
 .welcome {
-  text-align: left;
-  margin-top: 6.25rem;
-  line-height: 75%;
-  font-family: 'Proxima Nova';
-  font-size: 1.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 15vw;
+  height: 5vh;
+  background-color: #0E408A;
+  align-content: center;
+  border: 1vw 1vw #0E408A;
+  border-radius: 5vw;
+  margin-top: 12.5vh;
 }
 
 .first_text {
-  color: #000;
-  font-family: 'Montserrat';
-  font-size: 1.5625rem;
   text-align: center;
+  line-height: 75%;
+  font-family: 'Montserrat';
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: #FFF;
 }
 
 .first_text:hover {
@@ -57,18 +65,18 @@ body {
 
 .grid-item {
   background-color: #fff;
-  border: 0.3125rem solid #0E408A; 
+  border: 0.3125rem solid #000; 
   padding: 3.125rem; 
   text-align: center;
   min-width: 3rem;
-  min-height: 3rem;
+  min-height: 5rem;
   font-size: 1.875rem; 
   border-radius: 3.125rem;
 }
 
 .grid-item img {
   max-width: 20rem; 
-  max-height: 20rem; 
+  height: 10rem; 
   object-fit: contain;
 }
 
@@ -86,19 +94,6 @@ body {
   .grid-container {
     grid-template-columns: 1fr;
   }
-}
-
-.underline {
-  display: block;
-  align-self: center;
-  justify-content: center;
-  width: 12.5rem; 
-  height: 0.0625rem;
-  background-color: #000;
-  margin-left: auto;
-  margin-right: auto;
-  border: 0.0625rem 0.0625rem #000;
-  border-radius: 0.125rem;
 }
 
 #page-container {
