--- a/case_study_home.css
+++ b/case_study_home.css
@@ -30,8 +30,8 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-  width: 15vw;
-  height: 5vh;
+  width: 15rem;
+  height: 2.25rem;
   background-color: #0E408A;
   align-content: center;
   border: 1vw 1vw #0E408A;
