--- a/final_project.css
+++ b/final_project.css
@@ -35,6 +35,20 @@
     text-align: center;
 }
 
+.project_img {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: 100vw;
+    height: 75vh;
+    margin-top: 10vh;
+}
+
+.project_img img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 #game-container {
     display: flex;
     justify-content: center;
@@ -407,6 +421,16 @@
     text-align: left;
     margin-left: 17.5vw;
     color: #0E408A;
+}
+
+.preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+    margin-left: 5.5vw;
+    margin-top: 10vh;
 }
 
 #page-container {
