--- a/project_home.css
+++ b/project_home.css
@@ -1,5 +1,7 @@
 body {
   background-color: #f8f8ff;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar {
@@ -52,73 +54,57 @@ body {
   animation: shake 0.5s cubic-bezier(0.5, 0.075, 0.25, 1.0) both;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  justify-items: center;
+#content-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  padding: 3.125rem;
-  row-gap: 3.125rem;  
-  margin-bottom: 7.8125rem;
+  padding: 3.125rem 0;
+  min-height: calc(100vh - 255px);
 }
 
-.grid-item {
-  background-color: #fff;
-  border: 0.3125rem solid #000; 
-  padding: 3.125rem; 
+.image-container {
   text-align: center;
-  min-width: 3rem;
-  min-height: 5rem;
-  font-size: 1.875rem; 
-  border-radius: 3.125rem;
+  transition: top 0.3s ease-in-out;
 }
 
-.grid-item img {
-  max-width: 20rem; 
-  height: 10rem; 
+.image-container img {
+  max-width: 100%;
+  height: auto;
   object-fit: contain;
-}
-
-.grid-item img:hover {
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-  }
-}
-
-#page-container {
-  position: relative;
-  min-height: 20vh;
+.image-container.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 15vh;
   background-color: #000;
+  display: flex;
+  justify-content: left;
+  align-items: left;
 }
 
-#content-wrap {
-  margin-left: 3.125rem; 
-  margin-top: 2.5rem;
+#social-icons {
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  padding: 2.5rem;
 }
 
-#content-wrap img {
-  width: 1.5625rem; 
-  height: 1.5625rem; 
+#social-icons a {
+  margin: 0 0.625rem;
+}
+
+#social-icons img {
+  width: 1.5625rem;
+  height: 1.5625rem;
   object-fit: contain;
-  margin-left: 0.625rem;
   cursor: pointer;
 }
 
